--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,4 @@
 plugins {
-    id 'org.jetbrains.intellij' version '1.4.0'
     id 'java'
     id 'application'
 }
@@ -27,21 +26,12 @@ application {
 }
 
 dependencies {
-    implementation 'net.sf.bluecove:bluecove:2.1.0'
+    implementation 'io.ultreia:bluecove:2.1.1'
     implementation 'net.sf.bluecove:bluecove-gpl:2.1.0'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.2'
 }
 
-// See https://github.com/JetBrains/gradle-intellij-plugin/
-intellij {
-    version = '2021.3'
-}
-patchPluginXml {
-    changeNotes = """
-      Add change notes here.<br>
-      <em>most HTML tags may be used</em>"""
-}
 test {
     useJUnitPlatform()
 }
