--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,10 @@ application {
     mainClassName = "BluePoC"
 }
 
+run {
+    standardInput = System.in
+}
+
 dependencies {
     implementation 'io.ultreia:bluecove:2.1.1'
     implementation 'net.sf.bluecove:bluecove-gpl:2.1.0'
